@@ -110,6 +110,38 @@ lint:
 dist-hook:
 	find $(distdir)/. -name '*.test.c' -exec rm {} \;
 
+install-build-dependencies:
+	rm -rf ${DESTDIR}/*
+	(cd common-src ; make install-build-dependencies)
+	(cd xfer-src ; make install-build-dependencies)
+	(cd ndmp-src ; make install-build-dependencies)
+	(cd device-src ; make install-build-dependencies)
+	mkdir ${DESTDIR}/include
+	mkdir ${DESTDIR}/include/common-src
+	mkdir ${DESTDIR}/include/device-src
+	mkdir ${DESTDIR}/include/xfer-src
+	mkdir ${DESTDIR}/include/ndmp-src
+	mkdir ${DESTDIR}/include/amandad-src
+	mkdir ${DESTDIR}/include/server-src
+	mkdir ${DESTDIR}/include/client-src
+	mkdir ${DESTDIR}/include/recover-src
+	mkdir ${DESTDIR}/include/oldrecover-src
+	mkdir ${DESTDIR}/include/amar-src
+	mkdir ${DESTDIR}/include/contrib
+	mkdir ${DESTDIR}/include/contrib/gsc
+	mkdir ${DESTDIR}/include/config
+	mkdir ${DESTDIR}/include/config/snippet
+	mkdir ${DESTDIR}/include/perl
+	mkdir ${DESTDIR}/include/perl/amglue
+	mkdir ${DESTDIR}/include/gnulib
+	mkdir ${DESTDIR}/include/gnulib/arpa
+	mkdir ${DESTDIR}/include/gnulib/glthread
+	mkdir ${DESTDIR}/include/gnulib/sys
+	find . -name '*.h' -exec cp {} ${DESTDIR}/include/{} \;
+	mkdir ${DESTDIR}/config
+	cp -av config/amanda config/gnulib config/macro-archive ${DESTDIR}/config
+	echo ${CONFIGURE_ARGS} > ${DESTDIR}/configure_args
+
 # ensure that configure gets the right arguments for distcheck; this keeps the
 # user/group through to the distcheck, rather than defaulting back to 'amanda'.
 DISTCHECK_CONFIGURE_FLAGS = --with-user=$(CLIENT_LOGIN) --with-group=$(SETUID_GROUP) --with-owner=$(BINARY_OWNER) --disable-installperms --without-amperldir --without-force-uid --with-tmpdir=$(AMANDA_TMPDIR) SINGLE_USERID=yes CLOBBER_MY_CONFIG=OK
